test_compiler/errors/e07.gm
Procedure foo()
{
    Graph G;
    N_P<Int>(G) X;
    Int x;
    x.X = 0;

}
